fixed grid base alignment

--- a/sass/grid.sass
+++ b/sass/grid.sass
@@ -8,6 +8,8 @@
   flex-wrap: $wrap
   > *:nth-child(n)
     flex: 0 0 if($indent > 0, calc((#{100%} - #{(ceil($members) - 1)*$indent}) / #{$members}), calc(#{100%/$members}))
+    justify-content: flex-start
+    align-content: flex-start
     margin: 0
     margin-#{if($dir == row, right, bottom)}: $indent
     margin-#{if($dir == row, top, left)}: if($wrap == wrap, $indent, null)
